--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
@@ -1,12 +1,17 @@
-.table-container {
-  margin-top: 15px;
+.dashboard__gray-table-chart {
+  background-color: #ffffff;
+}
 
+.table-container {
+  margin-top: 20px;
   display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
 
   .column {
     display: flex;
     flex-direction: column;
-    margin-right: 60px;
+    margin-right: 0;
 
     .item {
       height: 36px;
@@ -15,6 +20,7 @@
       font-weight: 500;
       text-align: right;
       color: rgba(0, 0, 0, 0.87);
+      padding-top: 15px;
 
       &--title {
         text-align: left;
@@ -39,11 +45,20 @@
   }
 }
 
-.event-type-options {
+.options {
   margin-left: auto;
   cursor: pointer;
-  font-size: 18px;
   font-weight: 500;
+  font-size: 13px;
+
+  mat-icon {
+    margin-left: 0;
+    color: black;
+  }
+
+  .event-type-options {
+    margin-left: 20px;
+  }
 }
 
 .mat-icon {
@@ -51,24 +66,33 @@
   vertical-align: text-top;
 }
 
-.simpleChart {
-  background-color: #fafafa;
+.chart-statistics {
+  color: #333333;
+  background-color: rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  padding: 3px 5px;
+  width: 38px;
+  height: 32px;
+  font-size: 30px;
+  text-align: center;
 
-  .event-type-options {
+  &__chart {
+    border-radius: 2px 0 0 2px;
     margin-left: 20px;
-    font-size: 20px;
-
-    mat-icon {
-      margin-left: 0;
-    }
   }
 
-  .table-container {
-    justify-content: space-between;
-    margin-left: 20px;
-
-    .column {
-      margin-right: 0;
-    }
+  &__graph {
+    border-radius: 0 2px 2px 0;
   }
+}
+
+.selected {
+  color: #ffffff;
+  background-color: #333333;
+}
+
+.main {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21px;
 }
