--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
@@ -3,7 +3,7 @@
 }
 
 .dashboard-container {
-  background: white;
+  background: #F1F3F4;
 }
 
 .info {
@@ -17,14 +17,23 @@
     }
 
     &:nth-of-type(2) {
+      margin-top: 15px;
       font-size: 16px;
       font-weight: 400;
     }
 
     &:last-of-type {
-      margin: 5px 0;
+      margin-top: 0;
       font-size: 72px;
-      color: #B7FAF0;
+      color: #ffffff;
+      display: flex;
+
+      div {
+        &:first-of-type {
+          font-size: 36px;
+          margin-top: 11px;
+        }
+      }
     }
   }
 }
