--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -1,7 +1,7 @@
 .lowdata-container {
   display: flex;
   flex-direction: column;
-  background: linear-gradient(180deg, #4277C2 8.44%, #2C98F0 100%);
+  background: linear-gradient(180deg, #4277C2 0%, #2C98F0 100%);
   justify-content: center;
   min-height: calc(100vh - 70px - 62px); //subtract height of top nav and height of dashboard state tabs
 
@@ -19,7 +19,7 @@
       .total-revenue-text {
         font-size: 14px;
         font-weight: normal;
-        margin-top: 20px;
+        margin-top: 50px;
       }
 
       .total-revenue-amount {
@@ -54,21 +54,24 @@
 
   .chart-container {
     display: flex;
-    background-color: #fafafa;
-
-    funnel-graph {
-      display: block;
-    }
+    background-color: #f1f3f4;
+    justify-content: space-evenly;
+    margin-top: 10px;
 
     .funnel-graph {
-      width: 50%;
+      width: 45%;
+      background-color: #fafafa;
+      margin-top: 22px;
+      margin-bottom: 25px;
     }
 
     .transactions {
-      padding: 22px;
-      width: 50%;
+      padding: 22px 22px 0 22px;
+      width: 45%;
       color: rgba(0, 0, 0, 0.87);
-      border-left: 1px solid rgba(0, 0, 0, 0.15);
+      background-color: #ffffff;
+      margin-top: 22px;
+      margin-bottom: 25px;
 
       .transactions-header {
         display: flex;
@@ -76,7 +79,7 @@
 
         &__title {
           font-weight: 500;
-          font-size: 20px;
+          font-size: 18px;
         }
 
         .more {
@@ -88,13 +91,18 @@
             font-weight: 500;
             font-size: 14px;
             line-height: 16px;
-            letter-spacing: 0.1em;
+            letter-spacing: 0.05em;
+          }
+
+          mat-icon {
+            transform: rotate(270deg);
+            font-size: 18px;
           }
         }
       }
 
       table {
-        margin-top: 6px;
+        margin-top: 25px;
 
         th {
           font-weight: 500;
@@ -103,8 +111,11 @@
         }
 
         tr {
-          border-bottom: 1px solid  rgba(0, 0, 0, 0.15);
           cursor: pointer;
+        }
+
+        tr:not(:last-child) {
+          border-bottom: 1px solid  rgba(0, 0, 0, 0.15);
         }
 
         td {
