Attempt to cleanly initialize dashboard components with charts.

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -8,11 +8,11 @@
   <mat-tab label="SETUP">
     <c-dashboard-setup></c-dashboard-setup>
   </mat-tab>
-  <mat-tab *ngIf="availableDashboards.includes(DashboardType.low_data) || activeDashboard === DashboardType.low_data" label="TRANSACTIONS">
-    <c-dashboard-low-data></c-dashboard-low-data>
+  <mat-tab *ngIf="availableDashboards.includes(DashboardType.low_data) || activeIndex() === 1" label="TRANSACTIONS">
+    <c-dashboard-low-data *ngIf="activeIndex() === 1"></c-dashboard-low-data>
   </mat-tab>
-  <mat-tab *ngIf="availableDashboards.includes(DashboardType.full) || activeDashboard === DashboardType.full" label="DASHBOARD">
-    <c-dashboard-full></c-dashboard-full>
+  <mat-tab *ngIf="availableDashboards.includes(DashboardType.full) || activeIndex() === 2" label="DASHBOARD">
+    <c-dashboard-full *ngIf="activeIndex() === 2"></c-dashboard-full>
   </mat-tab>
 </mat-tab-group>
 
