--- a/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
+++ b/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="dashboard__gray-table-chart__chart">
-    <chart #chartI class="dashboard-chart" [options]="chartOptions" (load)="loadChart(chartI)"></chart>
+    <chart *ngIf="chartVisible" #chartI class="dashboard-chart" [options]="chartOptions" (load)="loadChart(chartI)"></chart>
   </div>
 
   <server-error-message (refresh)="refreshData()" *ngIf="serverError; else data"></server-error-message>
