Fix aligment of the left nav

--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -110,9 +110,9 @@
   width: 109px;
   position: absolute;
   top: 15px;
-  left: 15px;
+  left: 18px;
 }
 
 mat-hint.error {
-  color: b71c1c;
+  color: #b71c1c;
 }
