Respnsiveness for setup page

--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -26,14 +26,11 @@
       </div>
 
       <div class="setup-container__settings">
-        <div class="setup-container__settings__heading">
-          <div>{{'DASHBOARD_STATE_SETUP_ACCOUNT_TITLE' | translate}}</div>
-          <div>{{'DASHBOARD_STATE_SETUP_PROVIDERS_TITLE' | translate}}</div>
-          <div>{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_TITLE' | translate}}</div>
-        </div>
 
         <div class="setup-container__settings__columns">
         <div class="column">
+          <div class="column__header">{{'DASHBOARD_STATE_SETUP_ACCOUNT_TITLE' | translate}}</div>
+
           <div class="segment">
             <img src="/assets/images/dashboard/person.png">
             <div class="segment__content">
@@ -58,6 +55,8 @@
         </div>
 
         <div class="column">
+          <div class="column__header">{{'DASHBOARD_STATE_SETUP_PROVIDERS_TITLE' | translate}}</div>
+
           <div class="segment">
             <img src="/assets/images/dashboard/local_atm.png">
             <div class="segment__content">
@@ -89,6 +88,8 @@
         </div>
 
         <div class="column">
+          <div class="column__header">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_TITLE' | translate}}</div>
+
           <div class="segment">
             <img src="/assets/images/dashboard/shopping_cart.png">
             <div class="segment__content">
