--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
@@ -59,23 +59,6 @@
     border-radius: 4px;
     z-index: 0;
 
-    @media only screen and (min-width: 990px) and (max-width: 1165px) {
-      margin-top: -32px;
-    }
-
-    &__heading {
-      display: flex;
-      justify-content: space-between;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 19px;
-      margin-top: 30px;
-
-      div {
-        width: 33%;
-      }
-    }
-
     &__columns {
       display: flex;
 
@@ -84,6 +67,13 @@
         display: flex;
         flex-direction: column;
         width: 33%;
+
+        &__header {
+          margin-top: 30px;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 19px;
+        }
 
         .segment {
           display: flex;
@@ -103,6 +93,7 @@
             line-height: 16px;
             font-weight: 400;
             margin-left: 15px;
+            max-width: 560px;
 
             .title {
               margin: 10px 0;
@@ -113,6 +104,14 @@
             }
           }
         }
+
+        @media only screen and (max-width: 1200px) {
+          width: 100%;
+        }
+      }
+
+      @media only screen and (max-width: 1200px) {
+        flex-wrap: wrap;
       }
     }
   }
