--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
@@ -16,7 +16,7 @@
       <div>{{revenueMessage}}</div>
       <div>
         <div>$</div>
-        <div>{{totalAmount.amount}}</div>
+        <div>{{totalAmount.amount.toLocaleString()}}</div>
       </div>
     </div>
 
