--- a/src/app/pages/dashboard-page/dashboard.component.scss
+++ b/src/app/pages/dashboard-page/dashboard.component.scss
@@ -49,3 +49,11 @@
     width: 44%;
   }
 }
+
+.blue-tab-header {
+  padding-left: 25px;
+  background: #4277C2 !important;
+  padding-top: 20px;
+  height: 62px;
+  line-height: 40px;
+}
