Change slider and top nav color.

--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -69,6 +69,7 @@ mat-tab-body {
 
   .mat-tab-header {
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    border-top: 1px solid rgba(0, 0, 0, 0.12);
   }
 
   .mat-tab-labels {
