--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,8 +51,8 @@ body {
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: #4A90E2;
-    outline: 1px solid #4A90E2;
+    background-color: rgba(0, 0, 0, 0.12);
+    outline: 1px solid rgba(0, 0, 0, 0.12);
   }
 }
 
