--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -57,11 +57,19 @@
     justify-content: space-evenly;
     margin-top: 10px;
 
+    @media only screen and (max-width: 1300px) {
+      flex-direction: column;
+    }
+
     .funnel-graph {
       width: 45%;
       background-color: #fafafa;
       margin-top: 22px;
       margin-bottom: 25px;
+
+      @media only screen and (max-width: 1300px) {
+       width: 100%
+      }
     }
 
     .transactions {
@@ -71,6 +79,10 @@
       background-color: #ffffff;
       margin-top: 22px;
       margin-bottom: 25px;
+
+      @media only screen and (max-width: 1300px) {
+        width: 100%
+      }
 
       .transactions-header {
         display: flex;
