--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
@@ -26,9 +26,9 @@
   <dashboard-issues-report [reports]="issueReports"></dashboard-issues-report>
 
   <div class="charts-container">
-    <top-campaigns [renderChart]="renderCharts"></top-campaigns>
+    <top-campaigns></top-campaigns>
 
-    <top-subscriptions [renderChart]="renderCharts"></top-subscriptions>
+    <top-subscriptions></top-subscriptions>
 
     <funnel-graph [renderChart]="renderCharts"></funnel-graph>
   </div>
