--- a/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
+++ b/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
@@ -3,23 +3,26 @@
     <div class="main">{{'DASHBOARD_TOPCAMPAIGNS_TITLE' | translate}}</div>
   </div>
 
-  <div class="dashboard__gray-table-chart__chart">
-    <chart *ngIf="chartVisible && renderChart" #chartI class="dashboard-chart" [options]="chartOptions" (load)="loadChart(chartI)"></chart>
-  </div>
-
   <server-error-message (refresh)="refreshData()" *ngIf="serverError; else data"></server-error-message>
 
   <ng-template #data>
-    <div *ngIf="campaigns" class="dashboard__gray-table-chart__table">
-      <div class="item" *ngFor="let campaign of campaigns; let i = index" [routerLink]="['/campaigns', campaign.campaign]">
-        <div class="num" [style.background-color]="colors[i]">
+    <div class="dashboard__gray-table-chart__table" *ngIf="campaigns">
+      <div class="item" *ngFor="let campaign of campaigns; let i = index">
+        <div class="num">
           <div>{{i + 1}}</div>
         </div>
-        <div class="name">{{campaign.campaign_name || campaign.campaign}}</div>
-        <div class="amount">{{campaign.amount.usd()}}</div>
+
+        <div class="line-container" [style.width]="calculateLineWidth(i)">
+          <div class="line"></div>
+        </div>
+
+        <div class="row">
+          <div class="name" [routerLink]="['/campaigns', campaign.campaign]">{{campaign.campaign_name || campaign.campaign}}</div>
+          <div class="amount">{{campaign.amount.usd()}}</div>
+        </div>
       </div>
     </div>
 
-    <table-loader *ngIf="!campaigns"></table-loader>
+    <table-loader [numberOfRows]="5" *ngIf="!campaigns"></table-loader>
   </ng-template>
 </div>
