--- a/src/app/pages/dashboard-page/top-subscriptions/top-subscriptions.component.scss
+++ b/src/app/pages/dashboard-page/top-subscriptions/top-subscriptions.component.scss
@@ -1,7 +1,8 @@
-.dashboard__gray-table-chart__table {
+.dashboard__gray-table-chart__title {
+  margin-bottom: 4px;
+}
 
-  .num {
-    min-width: 30px;
-  }
-
+table-loader {
+  display: block;
+  margin: 20px -12px 0;
 }
