--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -129,8 +129,8 @@ $color-orange: #F16C00;
   }
 
   &__gray-table-chart {
-    background: #F4F4F4;
-    padding: 18px;
+    background-color: #ffffff;
+    padding: 23px 25px;
 
     &__title {
       display: flex;
@@ -141,6 +141,7 @@ $color-orange: #F16C00;
         color: rgba(0, 0, 0, 0.87);
         font-size: 18px;
         font-weight: 500;
+        line-height: 21px;
       }
 
       mat-icon {
@@ -153,44 +154,55 @@ $color-orange: #F16C00;
       }
     }
 
-    &__chart {
-
-    }
-
     &__table {
-      margin-top: 20px;
-
-      &--loader {
-
-      }
 
       .item {
-        margin: 12px 0;
-        display: flex;
+        margin-top: 18px;
         align-items: center;
-        cursor: pointer;
+
+        .row {
+          display: flex;
+          margin-top: 7px;
+        }
+
+        .line-container {
+          height: 4px;
+        }
+
+        .line {
+          height: 4px;
+          background: #1EBEA5;
+          animation: expand 750ms;
+        }
+
+        @keyframes expand {
+          from {
+            width: 0;
+          }
+          to {
+            width: 100%;
+          }
+        }
 
         .num {
           display: flex;
-          height: 30px;
-          width: 30px;
-          color: white;
+          margin-bottom: 7px;
+          line-height: 15px;
+          color: #1EBEA5;
           border-radius: 50%;
-          margin-right: 10px;
-          font-size: 20px;
-
-          div {
-            margin: auto;
-          }
+          font-size: 13px;
+          font-weight: 500;
         }
 
         .name {
           font-size: 14px;
+          line-height: 15px;
         }
 
         .amount {
           margin-left: auto;
-          font-size: 18px;
+          font-size: 14px;
+          line-height: 15px;
           font-weight: 500;
         }
       }
