--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -197,6 +197,7 @@ $color-orange: #F16C00;
         .name {
           font-size: 14px;
           line-height: 15px;
+          cursor: pointer;
         }
 
         .amount {
