Fix the width of highcharts root.

--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -431,3 +431,7 @@ $color-orange: #F16C00;
   padding: 10px 5px !important;
   line-height: 14px !important;
 }
+
+.highcharts-root{
+  width: 100% !important
+}
