Adjust revenue amount on low-dash.

--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -26,11 +26,12 @@
         color: #ffffff;
         font-weight: 400;
         font-size: 60px;
-        line-height: 70px;
+        line-height: 67px;
 
         :first-child {
           font-size: 30px;
-          line-height: 35px;
+          line-height: 43px;
+          font-weight: 400;
         }
       }
     }
