Background change on table view for low-data dashboard.

--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -64,7 +64,7 @@
 
     .funnel-graph {
       width: 45%;
-      background-color: #fafafa;
+      background-color: #ffffff;
       margin-top: 22px;
       margin-bottom: 25px;
 
