--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
@@ -1,26 +1,31 @@
 <div class="dashboard-container">
   <div class="dashboard">
+
+    <div class="dashboard-top-header">
+      <div class="info">
+        <div>{{revenueMessage}}</div>
+        <div>
+          <div>$</div>
+          <div>{{totalAmount.amount | numberlocale}}</div>
+        </div>
+      </div>
+
+      <div *ngIf="quote" class="dashboard-message">{{quote.quote}}</div>
+      <div *ngIf="quote" class="dashboard-message dashboard-message__author">-{{quote.attribution.author}}</div>
+
+    </div>
+
     <dashboard-header [campaigns]="campaigns"
                       [selectedCampaign]="selectedCampaign"
                       [queries]="queries"
                       [selectedQuery]="selectedQuery"
                       [timeFilters]="timeFilters"
-                      [quote]="quote"
                       (campaignSelected)="selectCampaign($event)"
                       (querySelected)="selectQuery($event)"
                       (timeFilterSelected)="selectTimeFilter($event)">
     </dashboard-header>
 
-    <div class="info">
-      <div>Welcome back, {{name}}</div>
-      <div>{{revenueMessage}}</div>
-      <div>
-        <div>$</div>
-        <div>{{totalAmount.amount | numberlocale}}</div>
-      </div>
-    </div>
-
-    <dashboard-dual-graph [renderChart]="renderCharts" [graphData]="data" [type]="seriesType"></dashboard-dual-graph>
+    <dashboard-dual-graph [renderChart]="renderCharts" [graphData]="data" [graphTimeFilter]="graphTimeFilterData" [type]="seriesType"></dashboard-dual-graph>
   </div>
 
   <dashboard-issues-report [reports]="issueReports"></dashboard-issues-report>
