--- a/src/app/pages/dashboard-page/dashboard-header/dashboard-header-dropdown/dashboard-header-dropdown.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-header/dashboard-header-dropdown/dashboard-header-dropdown.component.scss
@@ -24,6 +24,7 @@
     max-height: 190px;
     border-radius: 3px;
     min-width: calc(100% + 15px);
+    z-index: 1;
 
     &__item {
       display: flex;
